*******************************************************************************
* RECENT CHANGES
*******************************************************************************

=== 0.5.4 ===

=== 0.5.3 ===
* Added LSP_DSP_UNITS_SOUND_SPEED_M_S constant that defines sound speed.
* Added reset() method to the dspu::Equalizer class to reset internal memory.
* Added different information methods to the dspu::Equalizer which allow to obtain
  the current configuration state of the equalizer.

=== 0.5.2 ===
* Updated tracing information.
* Added maximum latency estimation for several modules.
* Updated the compressor module: added CM_BOOSTING mode for upward compression.

=== 0.5.1 ===
* Added DynamicDelay DSP processing unit.
* Fixed latency computation error for FIR and FFT modes of the filter.
* Optimized FIR and FFT dspu::Equalizer modes to use dsp::fastconv_ routines instead of FFT.
* Added SPM (Spectral Processing Module) mode to dspu::Equalizer module.
* Updated interface of dspu::Analyzer module, fixed inter-channel out-of-sync issue.
* Added dspu::fade_in and dspu::fade_out functions.
* Updated build system.

=== 0.5.0 ===
* Initial release.
